[package]
name = "mongobook"
version = "0.1.8"
authors = ["hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"
keywords = ["mongodb", "chess", "opening", "book"]
description = "Mongodb hosted chess opening book. Under construction."
license = "MIT"
repository = "https://github.com/hyperchessbot/mongobook"
homepage = "https://github.com/hyperchessbot/mongobook#mongobook"
documentation = "https://docs.rs/mongobook/0.1.8"
readme = "ReadMe.md"

[dependencies]
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.8.2"
pgnparse = "0.1.6"
ring = "0.16.19"
base64 = "0.13.0"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]

[dependencies.tokio]
version = "1.0.1"
features = ["full"]

[[bin]]
name = "example"
path = "src/example.rs"

[lib]
path = "src/lib.rs"